# NOTE:
# 1. for display continuity sake please use 2 spaces instead of tabs
# 2. make sure that lines break at 80 chars for constricted display situations
#<-------------------------------- 80 chars ---------------------------------->#

<----------------------------------------------- Changes.txt updated 'til here
2015-12-26 ede
  * renamed some classes from *DataStore* to *DS* if others in the same package
    already used the same naming scheme
  * adding H2 file db utilizes a filechooser now
  * streamlined AbstractSpatialDatabasesDataStoreDriver.createJdbcConnection()
    for file and database datastores
  * introduced AbstractSpatialDatabasesDSExtension collecting the basic routines
    used by all spatial database extensions
  * postgis is now installed via PostgisDSExtension registered in
    default-plugins.xml
  * removed obsolete empty JUMPConfiguration.configureDatastores() method

2015-12-24 bertazza
  * Fixed broken 4666 commit
  * Info feature tool: fixed issue related to dirty url
  * Removed IOException throw from TaskFrame method
  * Info feature tool for WMS: info shown only for visible layers, added
    &FEATURE_COUNT=10 parameter, and changed method to retrieve url as
    suggested by Jukka (should now support basic authentication).
  * Fixed broken 4663 commit

2015-12-23 bertazza
  * Info feature tool: added a pane to show WMS info.

2015-12-21 bertazza
  * Raster Styler: updated Italian and Spanish language files (thanks to Peppe)
  * Raster Styler: added check to ensure a valid number of classes has been
    selected.  

2015-12-20 ede
  * add support for spatial datastore layers to EditDataStoreQueryPlugIn
    allows finetuning the SQL query created with Open->Data Store Layer
  PLUS
  * add explicit mysql datastore for mysql jdbc
  * add MariaDB jdbc to lib/plus/dbdatastore/
  * updated to sqlite-jdbc-3.8.11.2.jar
  * updated to mysql-connector-java-5.1.38-bin.jar
  * moved db datastore jars to lib/plus/dbdatastore/
